Layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/demographic_summary.css
+++ b/mcidashboard/mcidashboard-front/src/css/demographic_summary.css
@@ -1,6 +1,6 @@
 .demographic-container {
     margin: 0 auto;
-    max-width: 900px;
+    max-width: 90%;
 }
 
 .demographic-table {
