--- a/mcidashboard/mcidashboard-front/src/css/sidebar.css
+++ b/mcidashboard/mcidashboard-front/src/css/sidebar.css
@@ -1,6 +1,6 @@
 .search-bar {
     border-radius: 8px;
-    width: 317px;
+    width: 20%;
     height: 47px;
     border: none;
     box-shadow: 0px 10px 60px 0px rgba(226, 236, 249, 0.50);
